# scrap_regions

./: .gitignore  README.md  find_regions.py  pyproject.toml  timezone_regions.txt
